# yew-plotly

./: Cargo.toml  LICENSE  README.md
examples/: scatter.rs
examples/scatter/: index.html
src/: lib.rs
