[package]
name = "yew-plotly"
version = "0.1.0"
authors = ["Adam Szalkowski <adam@szalkowski.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/butzist/yew-plotly.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = { version = "=0.8.1", features = ["wasm"] }
wasm-bindgen = "0.2.83"
yew = "0.19.3"

[[example]]
name = "scatter"
