[package]
name = "yew-plotly"
description = "yew wrapper for plotly.js"
version = "0.2.0"
authors = ["Adam Szalkowski <adam@szalkowski.de>", "Kaasa solution GmbH <info@kaasa.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/yew-plotly"
repository = "https://github.com/butzist/yew-plotly.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = { version = "0.8.3", features = ["wasm"] }
wasm-bindgen = "0.2.83"
yew = "0.21.0"

[[example]]
name = "scatter"

[dev_dependencies.yew]
features = ["csr"]
