[package]
name = "yew-plotly"
description = "yew wrapper for plotly.js"
version = "0.3.0"
authors = ["Adam Szalkowski <adam@szalkowski.de>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/yew-plotly"
repository = "https://github.com/butzist/yew-plotly.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = { version = "0.8.4", features = ["wasm"] }
wasm-bindgen = "0.2.91"
yew = "0.21.0"

[[example]]
name = "scatter"

[dev_dependencies.yew]
features = ["csr"]
